# halo2_verifiable_encryption

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  tasks.rs
src/add_sub_mul/: add_sub_mul.rs  chip.rs  mod.rs
src/circuits/: verifiable_encryption.rs  verifiable_encryption_with_relation.rs
src/constants/: fixed_bases.rs  sinsemilla.rs
src/elgamal/: elgamal.rs  extended_elgamal.rs  mod.rs
src/encode/: encode.rs  mod.rs  utf8.rs
src/tasks/: mod.rs  task1.rs  task2.rs  verifiable_encryption.rs  verifiable_encryption_with_relation.rs
src/ve_complete/: ve_complete.rs
src/ve_dec/: mod.rs  ve_dec.rs
