[package]
name = "halo2_verifiable_encryption"
version = "0.1.0"
edition = "2021"


[dependencies]
ff = "0.13"
group = { version = "0.13", features = ["wnaf-memuse"] }
halo2_gadgets = { git = "https://github.com/QED-it/halo2", branch = "verifiable-encryption", features = ["verifiable-encryption"] }
halo2_proofs = { git = "https://github.com/QED-it/halo2", branch = "verifiable-encryption", default-features = false, features = ["floor-planner-v1-legacy-pdqsort"] }

lazy_static = "1"
pasta_curves = "0.5"
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
subtle = "2.3"

# Developer tooling dependencies
image = { version = "0.24", optional = true }
plotters = { version = "0.3.0", optional = true }

[dev-dependencies]
halo2_gadgets = { git = "https://github.com/QED-it/halo2", branch = "verifiable-encryption", features = ["test-dependencies", "verifiable-encryption"] }

[features]
default = ["multicore"]
multicore = ["halo2_proofs/multicore"]